--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "work-request-from",
   "version": "1.0",
@@ -8,11 +7,12 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "4.15.2",
+    "express": "^4.16.4",
+    "package.json": "^2.0.1",
     "request": "^2.81.0"
   },
   "devDependencies": {
